2001-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Moved back some macros and inline functions from
	w3m-macro.el.

	* w3m-macro.el (w3m-parse-attributes, w3m-real-url,
	w3m-last-modified, w3m-content-type, w3m-content-length,
	w3m-content-encoding, w3m-content-charset, w3m-base-url,
	w3m-attributes): Moved back to w3m.el.

2001-11-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-retrieve) Call `w3m-w3m-attributes' instead of
	`w3m-attributes'.

	* w3m-proc.el (w3m-process-with-wait-handler): Reimplemented.

2001-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Moved some macros and inline functions to w3m-macro.el.

	* w3m-macro.el (w3m-time-newer-p, w3m-url-local-p,
	w3m-url-dtree-p, w3m-parse-attributes, w3m-real-url,
	w3m-last-modified,w3m-content-type, w3m-content-length,
	w3m-content-encoding, w3m-content-charset, w3m-base-url,
	w3m-attributes, w3m-cursor-anchor, w3m-submit, w3m-image,
	w3m-anchor, w3m-action, w3m-get-text-property-around): Moved from
	w3m.el.
	(w3m-condition-case): Use old-fashioned backquotes.

	* w3m.el, w3m-xmas.el, w3m-tabmenu.el, w3m-form.el, w3m-e21.el,
	w3m-bookmark.el, w3m-antenna.el, mime-w3m.el: Require `w3m-macro'.

2001-11-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-get-header, w3m-w3m-attributes): Asynchronized.
	(w3m-w3m-retrieve): Argument spec is changed.
	(w3m-w3m-dump-head-source): Follow change of `w3m-w3m-attributes'.
	(w3m-copy-buffer): Removed redundant code.
	(w3m-about-header): Follow change of `w3m-w3m-get-header'.

	* w3m-proc.el (w3m-process-do): The generated asynchronous process
	in the post handler is started at the end of
	`w3m-process-sentinel'.
	(w3m-process-do-with-temp-buffer): Ditto.
	(w3m-process-sentinel): Fixed.

	* w3m.el (w3m-download): Use `progn' instead of `inline', in order
	to make debugging be easy.
	(w3m-retrieve-and-render): Ditto.

	* w3m-proc.el: Changed the order of asynchronous form evaluation
	and starting asynchronous processes.