@@ -41,6 +41,7 @@
   (require 'cl)
   ;; Variables and functions which are used in the following inline
   ;; functions.  They should be defined in the other module at run-time.
+  (defvar w3m-html-string-regexp)
   (defvar w3m-work-buffer-list))
 
 ;;; Things should be defined in advance:
@@ -128,6 +129,65 @@ cursor position and around there."
   (if position
       (` (get-text-property (, position) 'w3m-cursor-anchor))
     (` (get-text-property (point) 'w3m-cursor-anchor))))
+
+
+;;; Attributes:
+
+(put 'w3m-parse-attributes 'lisp-indent-function '1)
+(def-edebug-spec w3m-parse-attributes
+  ((&rest &or (symbolp &optional symbolp) symbolp) body))
+(defmacro w3m-parse-attributes (attributes &rest form)
+  (` (let ((,@ (mapcar
+		(lambda (attr)
+		  (if (listp attr) (car attr) attr))
+		attributes)))
+       (skip-chars-forward " \t\r\f\n")
+       (while
+	   (cond
+	    (,@ (mapcar
+		 (lambda (attr)
+		   (or (symbolp attr)
+		       (and (listp attr)
+			    (<= (length attr) 2)
+			    (symbolp (car attr)))
+		       (error "Internal error, type mismatch"))
+		   (let ((sexp (quote
+				(w3m-remove-redundant-spaces
+				 (or (match-string-no-properties 2)
+				     (match-string-no-properties 3)
+				     (match-string-no-properties 1)))))
+			 type)
+		     (when (listp attr)
+		       (setq type (nth 1 attr))
+		       (cond
+			((eq type :case-ignore)
+			 (setq sexp (list 'downcase sexp)))
+			((eq type :integer)
+			 (setq sexp (list 'string-to-number sexp)))
+			((eq type :bool)
+			 (setq sexp t))
+			((eq type :decode-entity)
+			 (setq sexp (list 'w3m-decode-entities-string sexp)))
+			((nth 1 attr)
+			 (error "Internal error, unknown modifier")))
+		       (setq attr (car attr)))
+		     (` ((looking-at
+			  (, (if (eq type :bool)
+				 (symbol-name attr)
+			       (format "%s[ \t\r\f\n]*=[ \t\r\f\n]*%s"
+				       (symbol-name attr)
+				       w3m-html-string-regexp))))
+			 (setq (, attr) (, sexp))))))
+		 attributes))
+	    ((looking-at
+	      (, (concat "[A-Za-z]*[ \t\r\f\n]*=[ \t\r\f\n]*"
+			 w3m-html-string-regexp))))
+	    ((looking-at "[^<> \t\r\f\n]+")))
+	 (goto-char (match-end 0))
+	 (skip-chars-forward " \t\r\f\n"))
+       (skip-chars-forward "^>")
+       (forward-char)
+       (,@ form))))
 
 
 ;;; Miscellaneous:
